# electra-agent-orchestration

./: .dockerignore  .gitignore  Dockerfile  Procfile  context.md  docker-compose.yml  env.example  heroku.yml  main.py  pyproject.toml  requirements.txt
EVAA/: README.md  __init__.py  main.py
EVAA/agents/: __init__.py  information_gatherer.py
EVAA/config/: settings.py
EVAA/db/: connection.py
EVAA/db/models/: memory.py  stage.py
EVAA/handlers/: __init__.py  conversation_handler.py
EVAA/models/: conversation_model.py
EVAA/services/: __init__.py  stt.py  websocket_handler.py
agents/: brd_generator.py  information_gatherer.py
config/: settings.py
db/models/: memory.py
handlers/: brd_handler.py  conversation_handler.py
models/: brd_generator.py  conversation_model.py
schemas/: websocket_schema.py
services/: flux_stt.py  stt.py  websocket_handler.py
